appId: ${APP_ID}
name: User Preferences
onFlowStart:
  - runFlow: '../../helpers/setup.yaml'
onFlowComplete:
  - evalScript: ${output.utils.deleteCreatedUsers()}
tags:
  - test-8

---
- evalScript: ${output.user = output.utils.createUser()}
- runFlow:
    file: '../../helpers/login-with-deeplink.yaml'
    env:
      USERNAME: ${output.user.username}
      PASSWORD: ${output.user.password}
- runFlow:
    file: './utils/go-to-user-preference.yaml'

# should have notifications button
- extendedWaitUntil:
    visible:
      id: 'preferences-view-notifications'
    timeout: 60000

# should have also send to channel select
- extendedWaitUntil:
    visible:
      id: 'preferences-view-enable-message-parser'
    timeout: 60000

# should have convert ascii to emoji switch
- runFlow:
    when:
      platform: android
    commands:
      - extendedWaitUntil:
          visible:
            id: 'preferences-view-convert-ascii-to-emoji'
          timeout: 60000
- runFlow:
    when:
      platform: iOS
    commands:
      - extendedWaitUntil:
          visible:
            text: 'Convert ASCII to Emoji.*'
          timeout: 60000

# Test Notification Preference
- tapOn:
    id: preferences-view-notifications

# should have alert for In-App notification
- assertVisible:
    id: user-notification-preference-view-alert
- tapOn:
    id: user-notification-preference-view-alert

# check options in in-app-notification alert
- runFlow:
    when:
      platform: android
    commands:
      - assertVisible:
          id: notification-preferences-desktopNotifications-default
      - assertVisible:
          id: notification-preferences-desktopNotifications-all
      - assertVisible:
          id: notification-preferences-desktopNotifications-mentions
      - assertVisible:
          id: notification-preferences-desktopNotifications-nothing
      - tapOn:
          id: action-sheet-handle
- runFlow:
    when:
      platform: iOS
    commands:
      - extendedWaitUntil:
          visible:
            text: 'Nothing'
          timeout: 60000
      - assertVisible:
          text: 'Default'
      - assertVisible:
          text: 'All messages'
      - assertVisible:
          text: 'Mentions'
      - runFlow:
          file: '../../helpers/dismiss-menu.yaml'
          env:
            MENU_ITEM: 'Nothing'
# should have "Vibrate for new messages"
- assertVisible:
    id: user-notification-preference-view-in-app-vibration

# should have alert for push notification
- assertVisible:
    id: user-notification-preference-view-push-notification
- tapOn:
    id: user-notification-preference-view-push-notification

# check options in push-notification alert
- runFlow:
    when:
      platform: android
    commands:
      - assertVisible:
          id: notification-preferences-pushNotifications-default
      - assertVisible:
          id: notification-preferences-pushNotifications-all
      - assertVisible:
          id: notification-preferences-pushNotifications-mentions
      - assertVisible:
          id: notification-preferences-pushNotifications-nothing
      - tapOn:
          id: action-sheet-handle
- runFlow:
    when:
      platform: iOS
    commands:
      - extendedWaitUntil:
          visible:
            text: 'Nothing'
          timeout: 60000
      - assertVisible:
          text: 'Default'
      - assertVisible:
          text: 'All messages'
      - assertVisible:
          text: 'Mentions'
      - runFlow:
          file: '../../helpers/dismiss-menu.yaml'
          env:
            MENU_ITEM: 'Nothing'

# should have troubleshooting
- assertVisible:
    id: user-notification-preference-view-troubleshooting
- tapOn:
    id: user-notification-preference-view-troubleshooting
- assertVisible:
    id: push-troubleshoot-view-allow-push-notifications
- assertVisible:
    id: push-troubleshoot-view-push-gateway-connection
- assertVisible:
    id: push-troubleshoot-view-notification-delay
- runFlow: '../../helpers/go-back.yaml'

# should have alert in Email
- assertVisible:
    id: user-notification-preference-view-email-alert
- tapOn:
    id: user-notification-preference-view-email-alert

# check options in email alert
- runFlow:
    when:
      platform: android
    commands:
      - assertVisible:
          id: notification-preferences-emailNotificationMode-mentions
      - assertVisible:
          id: notification-preferences-emailNotificationMode-nothing
      - tapOn:
          id: action-sheet-handle
- runFlow:
    when:
      platform: iOS
    commands:
      - extendedWaitUntil:
          visible:
            text: 'Disabled'
          timeout: 60000
      - assertVisible:
          text: 'Every mention/DM'
      - runFlow:
          file: '../../helpers/dismiss-menu.yaml'
          env:
            MENU_ITEM: 'Disabled'
- runFlow: '../../helpers/go-back.yaml'

# ASCII should not be converted to emoji (Android only)
- runFlow:
    label: 'ASCII should not be converted to emoji'
    when:
      platform: Android
    commands:
      - runFlow: '../../helpers/go-back.yaml'
      - extendedWaitUntil:
          visible:
            id: 'profile-view'
          timeout: 60000
      - tapOn:
          id: 'profile-view-open-sidebar'
      - extendedWaitUntil:
          visible:
            id: 'sidebar-view'
          timeout: 60000
      - extendedWaitUntil:
          visible:
            id: 'sidebar-chats'
          timeout: 60000
      - tapOn:
          id: 'sidebar-chats'
      - runFlow:
          file: '../../helpers/search-room.yaml'
          env:
            ROOM: 'maestro-ascii-emoji-test'
      - extendedWaitUntil:
          visible:
            id: 'rooms-list-view-item-maestro-ascii-emoji-test'
          timeout: 60000
      - extendedWaitUntil:
          visible:
            text: 'e2e_admin: :('
          timeout: 60000
      - tapOn:
          id: 'rooms-list-view-item-maestro-ascii-emoji-test'
      - extendedWaitUntil:
          visible:
            text: ':('
          timeout: 60000

      - extendedWaitUntil:
          notVisible:
            text: '😞'
          timeout: 60000

# ASCII should be converted to emoji (Android Only)
- runFlow:
    label: 'ASCII should be converted to emoji'
    when:
      platform: Android
    commands:
      - runFlow: '../../helpers/go-back.yaml'
      - runFlow:
          file: './utils/go-to-user-preference.yaml'
      - extendedWaitUntil:
          visible:
            id: 'preferences-view-convert-ascii-to-emoji'
          timeout: 60000
      - tapOn:
          id: 'preferences-view-convert-ascii-to-emoji'
      - runFlow: '../../helpers/go-back.yaml'
      - extendedWaitUntil:
          visible:
            id: 'profile-view'
          timeout: 60000
      - tapOn:
          id: 'profile-view-open-sidebar'
      - extendedWaitUntil:
          visible:
            id: 'sidebar-view'
          timeout: 60000
      - extendedWaitUntil:
          visible:
            id: 'sidebar-chats'
          timeout: 60000
      - tapOn:
          id: 'sidebar-chats'
      - runFlow:
          file: '../../helpers/search-room.yaml'
          env:
            ROOM: 'maestro-ascii-emoji-test'
      - extendedWaitUntil:
          visible:
            id: 'rooms-list-view-item-maestro-ascii-emoji-test'
          timeout: 60000
      - extendedWaitUntil:
          visible:
            text: 'e2e_admin: 😞'
          timeout: 60000
      - tapOn:
          id: 'rooms-list-view-item-maestro-ascii-emoji-test'
      - extendedWaitUntil:
          visible:
            text: '😞'
          timeout: 60000
