appId: ${APP_ID}
name: Check Server
tags:
  - 'util'

---
- runFlow:
    file: '../../../helpers/tap-header-item.yaml'
    env:
      ANDROID_ID: 'rooms-list-view-sidebar'
      IOS_LABEL: 'Menu'
- extendedWaitUntil:
    visible:
      id: 'sidebar-view'
    timeout: 60000
- extendedWaitUntil:
    visible:
      text: '.*Connected to ${server}.*'
    timeout: 60000
- extendedWaitUntil:
    visible:
      id: 'sidebar-close-drawer'
    timeout: 60000
- tapOn:
    id: 'sidebar-close-drawer'

- runFlow:
    when:
      platform: iOS
    commands:
      - extendedWaitUntil:
          notVisible:
            id: 'sidebar-close-drawer'
          timeout: 60000
