appId: ${APP_ID}
name: Go To Display Pref
tags:
  - 'util'

---
- runFlow:
    file: '../../../helpers/tap-header-item.yaml'
    env:
      ANDROID_ID: 'rooms-list-view-sidebar'
      IOS_LABEL: 'Menu'
- extendedWaitUntil:
    visible:
      id: 'sidebar-accessibility'
    timeout: 60000
- tapOn:
    id: 'sidebar-accessibility'
- waitForAnimationToEnd:
    timeout: 60000
- extendedWaitUntil:
    visible:
      id: 'accessibility-display-button'
    timeout: 60000
- tapOn:
    id: 'accessibility-display-button'
