appId: ${APP_ID}
name: Go To User Preferences
tags:
  - 'util'

---
- runFlow:
    file: '../../../helpers/tap-header-item.yaml'
    env:
      ANDROID_ID: 'rooms-list-view-sidebar'
      IOS_LABEL: 'Menu'
- extendedWaitUntil:
    visible:
      id: 'sidebar-profile'
    timeout: 60000
- tapOn:
    id: 'sidebar-profile'
- extendedWaitUntil:
    visible:
      id: 'profile-view'
    timeout: 60000
- runFlow:
    file: '../../../helpers/tap-header-item.yaml'
    env:
      ANDROID_ID: 'preferences-view-open'
      IOS_LABEL: 'Preferences'
- extendedWaitUntil:
    visible:
      id: 'preferences-view'
    timeout: 60000
