appId: ${APP_ID}
name: Navigation To Language
tags:
  - 'util'

---
- extendedWaitUntil:
    visible:
      id: 'rooms-list-view'
    timeout: 60000
- runFlow:
    file: '../../../helpers/tap-header-item.yaml'
    env:
      ANDROID_ID: 'rooms-list-view-sidebar'
      IOS_LABEL: 'Menu'
- extendedWaitUntil:
    visible:
      id: 'sidebar-view'
    timeout: 60000
- extendedWaitUntil:
    visible:
      id: 'sidebar-settings'
    timeout: 60000
- tapOn:
    id: 'sidebar-settings'
- extendedWaitUntil:
    visible:
      id: 'settings-view'
    timeout: 60000
- waitForAnimationToEnd:
    timeout: 60000
- extendedWaitUntil:
    visible:
      id: 'settings-view-language'
    timeout: 60000
- tapOn:
    id: 'settings-view-language'
- extendedWaitUntil:
    visible:
      id: 'language-view'
    timeout: 60000
