appId: chat.rocket.reactnative
name: Navigate to E2EE Security
tags:
  - 'util'

---
- extendedWaitUntil:
    visible:
      id: rooms-list-view
    timeout: 60000
- tapOn:
    id: rooms-list-view-sidebar
- extendedWaitUntil:
    visible:
      id: sidebar-view
    timeout: 60000
- extendedWaitUntil:
    visible:
      id: sidebar-settings
    timeout: 60000
- tapOn:
    id: sidebar-settings
- waitForAnimationToEnd:
    timeout: 5000
- extendedWaitUntil:
    visible:
      id: settings-view
    timeout: 60000
- extendedWaitUntil:
    visible:
      text: Security and privacy
    timeout: 60000
- tapOn:
    text: Security and privacy
- extendedWaitUntil:
    visible:
      id: security-privacy-view
    timeout: 60000
- assertVisible:
    text: End-to-end encryption
- tapOn:
    text: End-to-end encryption
- extendedWaitUntil:
    visible:
      id: e2e-encryption-security-view
    timeout: 60000
- assertVisible:
    id: e2e-encryption-security-view-reset-password-button
