appId: ${APP_ID}
name: Create E2EE Room
tags:
  - 'flow'
---
- launchApp
- runFlow:
    file: '../../../helpers/tap-header-item.yaml'
    env:
      ANDROID_ID: 'rooms-list-view-create-channel'
      IOS_LABEL: 'Create new channel, team, direct message or discussion'
- extendedWaitUntil:
    visible:
      id: 'new-message-view'
- extendedWaitUntil:
    visible:
      id: 'new-message-view-create-channel'
    timeout: 60000
- tapOn:
    id: 'new-message-view-create-channel'
- extendedWaitUntil:
    visible:
      id: 'select-users-view'
    timeout: 60000
- runFlow:
    file: '../../../helpers/tap-search-field.yaml'
    env:
      SEARCH_ID: 'select-users-view-search'
- inputText: ${USER_TO_ADD}
- extendedWaitUntil:
    visible:
      id: 'select-users-view-item-${USER_TO_ADD}'
    timeout: 60000
- tapOn:
    id: 'select-users-view-item-${USER_TO_ADD}'
- extendedWaitUntil:
    visible:
      id: 'selected-user-${USER_TO_ADD}'
- runFlow: '../../../helpers/close-search.yaml'
- runFlow:
    file: '../../../helpers/tap-header-item.yaml'
    env:
      ANDROID_ID: 'selected-users-view-submit'
      IOS_LABEL: 'Next'
- extendedWaitUntil:
    visible:
      id: 'create-channel-name'
    timeout: 60000
- tapOn:
    id: 'create-channel-name'
- inputText: ${ROOM}
- runFlow: '../../../helpers/hide-keyboard.yaml'
- extendedWaitUntil:
    visible:
      id: 'create-channel-encrypted'
    timeout: 60000
- tapOn:
    id: 'create-channel-encrypted'
- tapOn:
    id: 'create-channel-submit'
- runFlow:
    file: '../../../helpers/assert-room-title.yaml'
    env:
      ROOM: ${ROOM}
