appId: ${APP_ID}
name: Change E2EE Key
tags:
  - 'util'

---
- tapOn: Enter manually
- tapOn: New password
- inputText: ${output.data.e2eePassword}
- runFlow: '../../../helpers/hide-keyboard.yaml'
- scrollUntilVisible:
    element:
      text: 'Save Changes'
    timeout: 60000
    centerElement: true
- tapOn: Save Changes
- extendedWaitUntil:
    visible:
      text: .*Are you sure.*
    timeout: 60000
- extendedWaitUntil:
    visible:
      text: .*Make sure you've saved it carefully somewhere else.*
    timeout: 60000
- tapOn: Yes, change it
