appId: ${APP_ID}
name: Navigate to E2EE Security
tags:
  - 'util'

---
- extendedWaitUntil:
    visible:
      id: rooms-list-view
    timeout: 60000
- runFlow:
    when:
      visible: 'Save your encryption password'
    commands:
      - assertVisible: Save your encryption password
- runFlow:
    when:
      visible: 'Enter E2EE password'
    commands:
      - assertVisible: Enter E2EE password
- runFlow:
    file: '../../../helpers/tap-header-item.yaml'
    env:
      ANDROID_ID: 'rooms-list-view-sidebar'
      IOS_LABEL: 'Menu'
- extendedWaitUntil:
    visible:
      id: sidebar-view
    timeout: 60000
- extendedWaitUntil:
    visible:
      id: sidebar-settings
    timeout: 60000
- tapOn:
    id: sidebar-settings
- waitForAnimationToEnd:
    timeout: 5000
- repeat:
    while:
      notVisible:
        id: security-privacy-view
    commands:
      - tapOn: Security and privacy

- assertVisible: End-to-end encryption
- tapOn: End-to-end encryption
- extendedWaitUntil:
    visible:
      id: e2e-encryption-security-view
    timeout: 60000
