appId: ${APP_ID}
name: Reset E2EE Key
tags:
  - 'util'

---
- scrollUntilVisible:
    element:
      id: e2e-encryption-security-view-reset-key
    direction: DOWN
    timeout: 30000
- extendedWaitUntil:
    visible:
      id: e2e-encryption-security-view-reset-key
    timeout: 60000
- tapOn:
    id: e2e-encryption-security-view-reset-key
- extendedWaitUntil:
    visible:
      text: .*Are you sure.*
    timeout: 60000
- extendedWaitUntil:
    visible:
      text: .*You're going to be logged out.*
    timeout: 60000
- tapOn:
    text: Yes, reset it
- extendedWaitUntil:
    visible:
      id: new-server-view
    timeout: 60000
